--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -20,3 +20,7 @@
 > 定义了一个创建对象的接口，但由子类决定要实例化的类是哪一个。工厂方法让类把实例化推迟到子类。
 5. 抽象工厂模式
 > 提供一个接口，用于创建相关或依赖对象的家族，而不需要指明具体类。
+6. 单例模式
+> 确保一个类只有一个实例，并提供一个全局的访问点。  
+>     需要注意的是，单例模式遇到多线程调用时，懒加载会导致线程不安全，单纯的将获取实例的方法设置为线程同步，有可能造成性能瓶颈。
+> 此时推荐使用双重检查锁
