命令模式基本实现 invoker --> SimpleRemote Receiver --> Light or GarageDoor

--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -24,3 +24,5 @@
 > 确保一个类只有一个实例，并提供一个全局的访问点。  
 >     需要注意的是，单例模式遇到多线程调用时，懒加载会导致线程不安全，单纯的将获取实例的方法设置为线程同步，有可能造成性能瓶颈。
 > 此时推荐使用双重检查锁
+7. 命令模式
+> 将"请求"封装成对象，以便使用不同的请求，队列或者日志来参数化其它对象。命令模式也支持可撤销的操作。
