--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -5,6 +5,7 @@
 4. 为了交互对象之间的松耦合设计而努力
 5. 对扩展开放，对修改关闭
 6. 要依赖抽象，不要依赖具体类
+7. 最少知识原则，减少对象之间的交互。
 
 
 
@@ -26,3 +27,8 @@
 > 此时推荐使用双重检查锁
 7. 命令模式
 > 将"请求"封装成对象，以便使用不同的请求，队列或者日志来参数化其它对象。命令模式也支持可撤销的操作。
+8. 适配器模式
+> 将一个类的接口，转换成客户期望的另一个接口。适配器让原本不兼容的类可以合作无间。  
+9. 外观模式
+> 提供了一个统一的接口，用来访问子系统中的一群接口。外观定义了一个高层接口，让子系统更容易使用。  
+> 隐藏系统的复杂性，并向客户端提供了一个客户端可以访问系统的接口。这种类型的设计模式属于结构型模式，它向现有的系统添加一个接口，来隐藏系统的复杂性
