模版方法模式

--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -6,6 +6,9 @@
 5. 对扩展开放，对修改关闭
 6. 要依赖抽象，不要依赖具体类
 7. 最少知识原则，减少对象之间的交互。
+8. 好莱坞原则：别调用我们，我们会调用你
+> 我们允许低层组件将自己挂钩到系统上，但是高层组件会决定什么时候和怎么样使用这些底层组件。  
+> 换句话说低层组件绝对不可以直接调用高层组件。低层组件通过挂钩的方式参与到高层组件的运算中去
 
 
 
@@ -32,3 +35,5 @@
 9. 外观模式
 > 提供了一个统一的接口，用来访问子系统中的一群接口。外观定义了一个高层接口，让子系统更容易使用。  
 > 隐藏系统的复杂性，并向客户端提供了一个客户端可以访问系统的接口。这种类型的设计模式属于结构型模式，它向现有的系统添加一个接口，来隐藏系统的复杂性
+10. 模版方法模式
+> 在一个方法中定义一个算法的骨架，而将一些步骤延迟到子类中。模版方法使得子类可以在不改变算法结构的情况下
