--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -37,3 +37,5 @@
 > 隐藏系统的复杂性，并向客户端提供了一个客户端可以访问系统的接口。这种类型的设计模式属于结构型模式，它向现有的系统添加一个接口，来隐藏系统的复杂性
 10. 模版方法模式
 > 在一个方法中定义一个算法的骨架，而将一些步骤延迟到子类中。模版方法使得子类可以在不改变算法结构的情况下
+11. 迭代器模式
+> 提供一种顺序访问一个聚合对象中的各个元素，而又不暴露其内部的表示.  
