组合模式|| 部分整体模式

--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -9,6 +9,8 @@
 8. 好莱坞原则：别调用我们，我们会调用你
 > 我们允许低层组件将自己挂钩到系统上，但是高层组件会决定什么时候和怎么样使用这些底层组件。  
 > 换句话说低层组件绝对不可以直接调用高层组件。低层组件通过挂钩的方式参与到高层组件的运算中去
+9. 一个类应该只有一个引起变化的原因。  
+10. 
 
 
 
@@ -39,3 +41,5 @@
 > 在一个方法中定义一个算法的骨架，而将一些步骤延迟到子类中。模版方法使得子类可以在不改变算法结构的情况下
 11. 迭代器模式
 > 提供一种顺序访问一个聚合对象中的各个元素，而又不暴露其内部的表示.  
+12. 组合模式
+> 允许你将对象组合成树形结构来表现"整体/部分"层次结构。组合能让客户以一致的方式处理个别对象以及对象组合。
