--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -10,38 +10,37 @@
 > 我们允许低层组件将自己挂钩到系统上，但是高层组件会决定什么时候和怎么样使用这些底层组件。  
 > 换句话说低层组件绝对不可以直接调用高层组件。低层组件通过挂钩的方式参与到高层组件的运算中去
 9. 一个类应该只有一个引起变化的原因。  
-10. 
 
 
 
 
 # 设计模式
 1. 策略模式  
-> 定义了算法族，分别封装起来，让它们之间可以互相替换，此模式让算法的变化独立于使用算法的客户。
+> &emsp;&emsp;定义了算法族，分别封装起来，让它们之间可以互相替换，此模式让算法的变化独立于使用算法的客户。
 2. 观察者模式
-> 定义了对象一对多的依赖，这样一来，当一个对象改变状态时，它的所有的依赖者都会收到通知并自动更新。
+> &emsp;&emsp;定义了对象一对多的依赖，这样一来，当一个对象改变状态时，它的所有的依赖者都会收到通知并自动更新。
 3. 装饰者模式
-> 动态地将责任附加到对象上，若要扩展功能，装饰者提供了比继承更有弹性的替代方案
+> &emsp;&emsp;动态地将责任附加到对象上，若要扩展功能，装饰者提供了比继承更有弹性的替代方案
 4. 工厂方法模式
 > 定义了一个创建对象的接口，但由子类决定要实例化的类是哪一个。工厂方法让类把实例化推迟到子类。
 5. 抽象工厂模式
-> 提供一个接口，用于创建相关或依赖对象的家族，而不需要指明具体类。
+> &emsp;&emsp;提供一个接口，用于创建相关或依赖对象的家族，而不需要指明具体类。
 6. 单例模式
-> 确保一个类只有一个实例，并提供一个全局的访问点。  
->     需要注意的是，单例模式遇到多线程调用时，懒加载会导致线程不安全，单纯的将获取实例的方法设置为线程同步，有可能造成性能瓶颈。
+> &emsp;&emsp;确保一个类只有一个实例，并提供一个全局的访问点。  
+> &emsp;&emsp;需要注意的是，单例模式遇到多线程调用时，懒加载会导致线程不安全，单纯的将获取实例的方法设置为线程同步，有可能造成性能瓶颈。
 > 此时推荐使用双重检查锁
 7. 命令模式
 > 将"请求"封装成对象，以便使用不同的请求，队列或者日志来参数化其它对象。命令模式也支持可撤销的操作。
 8. 适配器模式
-> 将一个类的接口，转换成客户期望的另一个接口。适配器让原本不兼容的类可以合作无间。  
+> &emsp;&emsp;将一个类的接口，转换成客户期望的另一个接口。适配器让原本不兼容的类可以合作无间。  
 9. 外观模式
-> 提供了一个统一的接口，用来访问子系统中的一群接口。外观定义了一个高层接口，让子系统更容易使用。  
-> 隐藏系统的复杂性，并向客户端提供了一个客户端可以访问系统的接口。这种类型的设计模式属于结构型模式，它向现有的系统添加一个接口，来隐藏系统的复杂性
+> &emsp;&emsp;提供了一个统一的接口，用来访问子系统中的一群接口。外观定义了一个高层接口，让子系统更容易使用。  
+> &emsp;&emsp;隐藏系统的复杂性，并向客户端提供了一个客户端可以访问系统的接口。这种类型的设计模式属于结构型模式，它向现有的系统添加一个接口，来隐藏系统的复杂性
 10. 模版方法模式
-> 在一个方法中定义一个算法的骨架，而将一些步骤延迟到子类中。模版方法使得子类可以在不改变算法结构的情况下
+> &emsp;&emsp;在一个方法中定义一个算法的骨架，而将一些步骤延迟到子类中。模版方法使得子类可以在不改变算法结构的情况下
 11. 迭代器模式
-> 提供一种顺序访问一个聚合对象中的各个元素，而又不暴露其内部的表示.  
+> &emsp;&emsp;提供一种顺序访问一个聚合对象中的各个元素，而又不暴露其内部的表示.  
 12. 组合模式
-> 允许你将对象组合成树形结构来表现"整体/部分"层次结构。组合能让客户以一致的方式处理个别对象以及对象组合。
+> &emsp;&emsp;允许你将对象组合成树形结构来表现"整体/部分"层次结构。组合能让客户以一致的方式处理个别对象以及对象组合。
 13. 状态模式
-> 允许对象在内部状态改变时改变它的行为，对象看起来好像修改了它的类。  
+> &emsp;&emsp;允许对象在内部状态改变时改变它的行为，对象看起来好像修改了它的类。  
