--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -44,3 +44,5 @@
 > &emsp;&emsp;允许你将对象组合成树形结构来表现"整体/部分"层次结构。组合能让客户以一致的方式处理个别对象以及对象组合。
 13. 状态模式
 > &emsp;&emsp;允许对象在内部状态改变时改变它的行为，对象看起来好像修改了它的类。  
+14. 代理模式
+> &emsp;&emsp;为另一个对象提供一个替身或占位符以控制对这个对象的访问。
