建造者模式

--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -46,3 +46,6 @@
 > &emsp;&emsp;允许对象在内部状态改变时改变它的行为，对象看起来好像修改了它的类。  
 14. 代理模式
 > &emsp;&emsp;为另一个对象提供一个替身或占位符以控制对这个对象的访问。
+15. 建造者模式
+> &emsp;&emsp;使用多个简单的对象一步一步构建成一个复杂的对象。这种类型的设计模式属于创建型模式，它提供了一种创建对象的最佳方式。
+> &emsp;&emsp;建造者模式更关注零件的装配顺序。
