单例模式复习 策略模式复习

--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -16,7 +16,8 @@
 
 # 设计模式
 1. 策略模式  
-> &emsp;&emsp;定义了算法族，分别封装起来，让它们之间可以互相替换，此模式让算法的变化独立于使用算法的客户。
+> &emsp;&emsp;定义了算法族，分别封装起来，让它们之间可以互相替换，此模式让算法的变化独立于使用算法的客户。  
+> java中的策略模式应用：int compare(T o1,T o2); interface Comparable;
 2. 观察者模式
 > &emsp;&emsp;定义了对象一对多的依赖，这样一来，当一个对象改变状态时，它的所有的依赖者都会收到通知并自动更新。
 3. 装饰者模式
@@ -27,8 +28,12 @@
 > &emsp;&emsp;提供一个接口，用于创建相关或依赖对象的家族，而不需要指明具体类。
 6. 单例模式
 > &emsp;&emsp;确保一个类只有一个实例，并提供一个全局的访问点。  
-> &emsp;&emsp;需要注意的是，单例模式遇到多线程调用时，懒加载会导致线程不安全，单纯的将获取实例的方法设置为线程同步，有可能造成性能瓶颈。
-> 此时推荐使用双重检查锁
+> &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;需要注意的是，单例模式遇到多线程调用时，懒加载会导致线程不安全，单纯的将获取实例的方法设置为线程同步，有可能造成性能瓶颈。    
+> 此时推荐使用双重检查锁,或者静态内部类、enum（可以防止被反序列化）
+> 为什么不直接将所有业务方法都设置为静态方法，而使用单例模式？
+> 答：当类自给自足，不需要复杂的初始化时，可以通过将方法均设置为静态方法。 
+> 当该类依赖别的类时，为了保证初始化的正确性，推荐使用单例模式。   
+> 单例一般在工程中由spring提供  
 7. 命令模式
 > 将"请求"封装成对象，以便使用不同的请求，队列或者日志来参数化其它对象。命令模式也支持可撤销的操作。
 8. 适配器模式
@@ -49,3 +54,4 @@
 15. 建造者模式
 > &emsp;&emsp;使用多个简单的对象一步一步构建成一个复杂的对象。这种类型的设计模式属于创建型模式，它提供了一种创建对象的最佳方式。
 > &emsp;&emsp;建造者模式更关注零件的装配顺序。
+4-策略模式第二单元
