中介者模式

--- a/src/main/java/com/designPattern/设计原则.md
+++ b/src/main/java/com/designPattern/设计原则.md
@@ -5,7 +5,7 @@
 4. 为了交互对象之间的松耦合设计而努力
 5. 对扩展开放，对修改关闭
 6. 要依赖抽象，不要依赖具体类
-7. 最少知识原则，减少对象之间的交互。
+7. 最少知识原则，减少对象之间的交互，一个类对其它类知道的越少越好。
 8. 好莱坞原则：别调用我们，我们会调用你
 		我们允许低层组件将自己挂钩到系统上，但是高层组件会决定什么时候和怎么样使用这些底层组件。  
 		换句话说低层组件绝对不可以直接调用高层组件。低层组件通过挂钩的方式参与到高层组件的运算中去。  
@@ -25,8 +25,8 @@
 * 定义了一个创建对象的接口，但由子类决定要实例化的类是哪一个。工厂方法让类把实例化推迟到子类。  
 5. 抽象工厂模式
 * 提供一个接口，用于创建相关或依赖对象的家族，而不需要指明具体类。  
-* 为什么要使用工厂模式？灵活控制生产过程、控制类的权限、对类进行修饰、记录日志等。
-* 形容词使用接口，名次使用抽象类。
+* 为什么要使用工厂模式？灵活控制生产过程、控制类的权限、对类进行修饰、记录日志等。  
+* 形容词使用接口，名次使用抽象类。  
   
 6. 单例模式
 * 确保一个类只有一个实例，并提供一个全局的访问点。  
@@ -63,4 +63,6 @@
 15. 建造者模式
 * 使用多个简单的对象一步一步构建成一个复杂的对象。这种类型的设计模式属于创建型模式，它提供了一种创建对象的最佳方式。
 * 建造者模式更关注零件的装配顺序。
-      4-策略模式第二单元
+16. 中介者模式  
+* 用来降低多个·对象和类之间的通信复杂性。提供一个中介类，用来处理不同的类与对象之间的通信
+* 常见的有：微信、消息中间件等
