桥接模式（没有很理解他和装饰器的区别）

--- a/src/main/java/com/dp/设计原则.md
+++ b/src/main/java/com/dp/设计原则.md
@@ -68,6 +68,9 @@
 * 常见的有：微信、消息中间件等
 17. 责任链模式
 * 为了避免请求发送者与多个请求处理者耦合在一起，于是将所有请求的处理者通过前一对象记住其下一个对象的引用而连成一条链；当有请求发生时，可将请求沿着这条链传递，直到有对象处理它为止。
+18. 桥接模式
+* 用于把抽象化与实现化解耦，使得二者可以独立变化。通过提供抽象化和实现化之间的桥接结构，来实现二者的解耦。
+* 分离抽象化和实现，使两者的接口可以不同，目的是分离。  
 
 # OO思维
 1. 考虑类：名词
