原型模式prototype（日常工作中没有用到过，也没有想到比较常用的应用场景。

--- a/src/main/java/com/dp/设计原则.md
+++ b/src/main/java/com/dp/设计原则.md
@@ -10,6 +10,7 @@
 		我们允许低层组件将自己挂钩到系统上，但是高层组件会决定什么时候和怎么样使用这些底层组件。  
 		换句话说低层组件绝对不可以直接调用高层组件。低层组件通过挂钩的方式参与到高层组件的运算中去。  
 9. 一个类应该只有一个引起变化的原因。  
+10. DRY don`t repeat yourself
 
 # 设计模式
 1. 策略模式  
@@ -71,6 +72,9 @@
 18. 桥接模式
 * 用于把抽象化与实现化解耦，使得二者可以独立变化。通过提供抽象化和实现化之间的桥接结构，来实现二者的解耦。
 * 分离抽象化和实现，使两者的接口可以不同，目的是分离。  
+19. 原型模式
+* 使用原型实例指定将要创建的对象来行，通过拷贝这个实例创建新的对象。  
+* 一般针对直接创建该对象对资源消耗比较大的类，（比如需要连接数据库，初始化数据）
 
 # OO思维
 1. 考虑类：名词
