--- a/src/main/java/com/dp/设计原则.md
+++ b/src/main/java/com/dp/设计原则.md
@@ -19,8 +19,10 @@
 * 现实模型：英雄皮肤、武器等。    	
 2. 观察者模式
 * 定义了对象一对多的依赖，这样一来，当一个对象改变状态时，它的所有的依赖者都会收到通知并自动更新。
-3. 装饰者模式
-* 动态地将责任附加到对象上，若要扩展功能，装饰者提供了比继承更有弹性的替代方案
+3. 装饰器模式
+* 动态地将责任附加到对象上，若要扩展功能，装饰者提供了比继承更有弹性的替代方案  
+* 动态增强对象的功能。
+* 可以看作是aop的一种动态实现。
 
 4. 工厂方法模式
 * 定义了一个创建对象的接口，但由子类决定要实例化的类是哪一个。工厂方法让类把实例化推迟到子类。  
