--- a/src/main/java/com/dp/设计原则.md
+++ b/src/main/java/com/dp/设计原则.md
@@ -47,7 +47,8 @@
 
 9. 外观模式
 * 提供了一个统一的接口，用来访问子系统中的一群接口。外观定义了一个高层接口，让子系统更容易使用。  
-* 隐藏系统的复杂性，并向客户端提供了一个客户端可以访问系统的接口。这种类型的设计模式属于结构型模式，它向现有的系统添加一个接口，来隐藏系统的复杂性
+* 隐藏系统的复杂性，并向客户端提供了一个客户端可以访问系统的接口。这种类型的设计模式属于结构型模式，它向现有的系统添加一个接口，来隐藏系统的复杂性。  
+* 外观模式在开发中的一些应用：常见的一些http工具类。
 
 10. 模版方法模式
 * 在一个方法中定义一个算法的骨架，而将一些步骤延迟到子类中。模版方法使得子类可以在不改变算法结构的情况下
@@ -81,3 +82,8 @@
 # OO思维
 1. 考虑类：名词
 2. 多态： 带来系统的可扩展性。
+
+# 一些小问题
+1. 代理模式和装饰器模式区别是什么？
+* 代理模式不实现被代理对象类似的业务，而是实现一些与目标对象功能联系不紧密的职责。
+* 装饰器模式是对被装饰对象的功能进行增强。
