剩下几种模式在后续工作中学习，不再做单独学习 开始转入java多线程部分，今日没有code和笔记产生

--- a/src/main/java/com/dp/设计原则.md
+++ b/src/main/java/com/dp/设计原则.md
@@ -84,6 +84,7 @@
 2. 多态： 带来系统的可扩展性。
 
 # 一些小问题
-1. 代理模式和装饰器模式区别是什么？
+1. 代理模式和装饰器模式以及适配器模式区别是什么？
 * 代理模式不实现被代理对象类似的业务，而是实现一些与目标对象功能联系不紧密的职责。
 * 装饰器模式是对被装饰对象的功能进行增强。
+* 适配器模式是对功能的调整，modify a to b。
