--- a/src/main/java/com/dsa/数据结构与算法.md
+++ b/src/main/java/com/dsa/数据结构与算法.md
@@ -34,3 +34,16 @@
 3.1. 维护一个有序单链表，越靠近链表尾部的结点是越早之前的访问的，当一个新的数据被访问时   
 3.2. 遍历链表删除该链表的相同结点，然后重新从头部插入  
 3.3. 缓存未满时，从头插入，缓存已满，则将链表尾部结点删除。  
+
+
+
+#后续应该练习的点
+单链表反转
+
+链表中环的检测
+
+两个有序的链表合并
+
+删除链表倒数第 n 个结点
+
+求链表的中间结点
